force-app/main/default/objects/Interface_Configuration__mdt/Interface_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Interface Configuration</label>
    <pluralLabel>Interface Configurations</pluralLabel>
</CustomObject>