force-app/main/default/objects/Interface_Configuration__mdt/fields/Admin_Emails__c.field-meta.xml
<CustomField>
    <fullName>Admin_Emails__c</fullName>
    <label>Admin Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>