force-app/main/default/objects/Interface_Configuration__mdt/fields/Client_Key_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Key_Header_Name__c</fullName>
    <label>Client Key Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>