force-app/main/default/objects/Interface_Configuration__mdt/fields/Error_Element__c.field-meta.xml
<CustomField>
    <fullName>Error_Element__c</fullName>
    <label>Error Element</label>
    <length>100</length>
    <type>Text</type>
</CustomField>