force-app/main/default/objects/Interface_Configuration__mdt/fields/Insert_Method__c.field-meta.xml
<CustomField>
    <fullName>Insert_Method__c</fullName>
    <label>Insert Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>