force-app/main/default/objects/Interface_Configuration__mdt/fields/Object_to_Display__c.field-meta.xml
<CustomField>
    <fullName>Object_to_Display__c</fullName>
    <label>Object to Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kaltura</fullName>
            </value>
            <value>
                <fullName>DIH</fullName>
                <default>true</default>
                <label>DIH</label>
            </value>
            <value>
                <fullName>CRANE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>