force-app/main/default/objects/Interface_Configuration__mdt/fields/Overwritten_Interface_Class__c.field-meta.xml
<CustomField>
    <fullName>Overwritten_Interface_Class__c</fullName>
    <label>Overwritten Interface Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>