force-app/main/default/objects/Interface_Configuration__mdt/fields/Pass_Key_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Pass_Key_Header_Name__c</fullName>
    <label>Pass Key Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>