force-app/main/default/objects/Interface_Configuration__mdt/fields/Primary_Key_Element__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key_Element__c</fullName>
    <label>Primary Key Element</label>
    <length>100</length>
    <type>Text</type>
</CustomField>