force-app/main/default/objects/Interface_Configuration__mdt/fields/Primary_Key_Field__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key_Field__c</fullName>
    <label>Primary Key Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>