force-app/main/default/objects/Interface_Configuration__mdt/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <label>Retry</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>