force-app/main/default/objects/Interface_Configuration__mdt/fields/Second_Key_Element__c.field-meta.xml
<CustomField>
    <fullName>Second_Key_Element__c</fullName>
    <label>Second Key Element</label>
    <length>100</length>
    <type>Text</type>
</CustomField>