force-app/main/default/objects/Interface_Configuration__mdt/fields/Second_Key_Field__c.field-meta.xml
<CustomField>
    <fullName>Second_Key_Field__c</fullName>
    <label>Second Key Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>