force-app/main/default/objects/Interface_Configuration__mdt/fields/Set_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Set_Timeout__c</fullName>
    <defaultValue>(5000)</defaultValue>
    <label>Set Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>