force-app/main/default/objects/Interface_Configuration__mdt/fields/Static_Header__c.field-meta.xml
<CustomField>
    <fullName>Static_Header__c</fullName>
    <label>Static Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>