force-app/main/default/objects/Interface_Configuration__mdt/fields/Update_Method__c.field-meta.xml
<CustomField>
    <fullName>Update_Method__c</fullName>
    <label>Update Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>